--- a/deadline-game.html
+++ b/deadline-game.html
@@ -59,7 +59,7 @@
                 <div class="title">FLAPPY BIRD</div>
             </div>
             <div class="game" onclick="(window.open('Breakout.html'))">
-                <div class="wallpaper" style="background:url('breakout-wp.jpg') no-repeat center; background-size:cover;"></div>
+                <div class="wallpaper" style="background:url('Breakout-wp.jpg') no-repeat center; background-size:cover;"></div>
                 <div class="title">BREAKOUT</div>
             </div>
         </section>
